val springVersion: String by project
val lombokVersion: String by project
val queryDslVersion: String by project

plugins {
    id("java")
    id("jacoco")
    id("io.spring.dependency-management")

    id("com.diffplug.spotless")
    id("com.github.andygoossens.gradle-modernizer-plugin")
}

subprojects {
    apply(plugin = "jacoco")
    apply(plugin = "java-library")
    apply(plugin = "io.spring.dependency-management")
    apply(plugin = "com.github.andygoossens.gradle-modernizer-plugin")

    dependencies {
        annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
        compileOnly("org.projectlombok:lombok:${lombokVersion}")
        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    }

    dependencyManagement {
        imports {
            mavenBom("com.querydsl:querydsl-bom:${queryDslVersion}")
            mavenBom("org.springframework.boot:spring-boot-dependencies:${springVersion}")
        }
        dependencies{
            dependency("org.apache.commons:commons-csv:1.12.0")
            dependency("io.hypersistence:hypersistence-utils-hibernate-62:3.9.4")
            dependency("com.google.guava:guava:33.3.1-jre")
        }
    }

    java { toolchain { languageVersion.set(JavaLanguageVersion.of(25)) } }

    tasks.test {
        useJUnitPlatform()
        testLogging {
            showExceptions = true
            showCauses = true
            showStackTraces = true
        }
    }

    tasks.register("cleanResources") {
        delete("${layout.buildDirectory}/resources")
    }

    tasks.compileJava {
        dependsOn("cleanResources")
    }
}
allprojects {
    group = "org.transitclock"
    version = "3.0.0-SNAPSHOT"

    configurations.all {
        resolutionStrategy.cacheChangingModulesFor(0, "minutes")
    }

    repositories {
        mavenCentral()
        mavenLocal()
    }

    modernizer {
        failOnViolations = true
        includeTestClasses = true
        ignorePackages = setOf("com.google.transit.realtime")
    }

}
